--- a/vignettes/isoviz.Rmd
+++ b/vignettes/isoviz.Rmd
@@ -25,19 +25,12 @@ Our package aims to help quantify and visualize the transcript isoforms that are
 # Exemplary workflow 
 
 We start off by loading all our exon and intron coordinates. By default, this will use 'gencode.v41.basic annotation' data. You can also input your own psl file (gtf file as well in the future).  
-```{r}
-#this should be done somewhere else in the package maybe need to re-do git commands
-#library(data.table) 
-#library(tidyr)
-#library(dplyr)
-#library(readr)
-```
 
 ```{r}
 file_path <- system.file("data", "gencode.v41.basic.annotation.psl", package="isoviz")
-gene_trans <- system.file("data", "gencode_v41_gene_transcript_convert", package="isoviz")
+#gene_trans <- system.file("data", "gencode_v41_gene_transcript_convert", package="isoviz")
 
-all_coordinates = isoviz_coords(file_path, gene_trans, input_type="psl") #use default genome .psl file  
+#all_coordinates = isoviz_coords(file_path, gene_trans, input_type="psl") #use default genome .psl file  
 ```
 
 ```{r}
