--- a/vignettes/isoviz.Rmd
+++ b/vignettes/isoviz.Rmd
@@ -92,10 +92,9 @@ print(head(mapped_junctions))
 Now we are ready to make a plot! 
 ```{r}
 isoviz_plot_juncs_to_iso(mapped_junctions, rbfox2_exons,
-                                    cell_type = "hESC",
-                                    junction_usage = 5, #min junc usage to be included 
-                                    include_all_juncs = FALSE,
-                                    include_specific_junctions = c("JUNC00193787", "JUNC00193785", "JUNC00193786", "unk.7"))
+                                    cell_type = "hESC", # based on which cell type was used for obtaining leafcutter junctions and clusters 
+                                    junc_usage = 5, #min junc usage to be included 
+                                    include_all_juncs = TRUE)
   
 ```
-
+Now let's make the same plot but with scaled introns so that we can see the exons better! 
