--- a/vignettes/isoviz.Rmd
+++ b/vignettes/isoviz.Rmd
@@ -110,7 +110,15 @@ isoviz_plot_juncs_to_iso(mapped_junctions, gene_exons, gene_introns,
                                     include_all_juncs = FALSE,
                                     include_specific_isoforms = c("RBFOX2-209", "RBFOX2-220", "RBFOX2-208", "RBFOX2-205"),
                                     include_specific_junctions = c("junc178147", "junc178149", "junc178135", "junc178136", "junc178145", "junc178146"))
-date <- format(Sys.Date(), "%y%m%d")
-ggsave(paste0("~/isoviz/plots/", date, "_", gene,".png"), width = 8, height = 2)
+#date <- format(Sys.Date(), "%y%m%d")
+#ggsave(paste0("~/isoviz/plots/", date, "_", gene,".png"), width = 8, height = 2)
 
 ```
+
+Finally, if you are interested in obtaining a list of sgRNAs that you could use to target specific junctions with Cas13, you can do the following: 
+
+```{r}
+#guide_table = isoviz_get_guide_predictions(gene = "ENSG00000100320", leafcutter_input=intron_clusts)
+#guide_table
+```
+
